# newsraft

./: .editorconfig  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  README.md  TODO  build.ninja  feedeater.1  feedeater.scd  feeds.example  makefile  meson.build  meson_options.txt
.woodpecker/: alpine.yaml  arch.yaml
doc/: build-instructions.md  changes.md  comparison-newsboat.md  contributing-change.md  contributing-report.md  contributing-support.md  contributing.md  feedeater.scd  license-ncurses.txt  license-termbox2.txt  license.txt  making-a-release.md  newsraft.1  newsraft.html  newsraft.scd  project-goals.md
doc/examples/: config  feeds
examples/: config  feeds
src/: alloc.c  binds.c  commands.c  config-defaults.c  config-path.c  config-verifier.c  config.c  config.h  contents-metadata.c  contents.c  curses.c  date-rfc3339.c  date-rfc822.c  date-utils.c  dates.c  db-feeds.c  db-items.c  db.c  debug.c  download.c  downloader.c  errors.c  executor.c  feedeater.c  feedeater.h  feeds-parse.c  feeds-sections.c  feeds-verifier.c  feeds.c  format.c  html-entities.c  html-entity.c  html-plainifier.c  html_entities.c  html_parser.c  input-binds-default.c  input-macros.c  input.c  input.h  inserter.c  (+77 more)
src/db/: db.c  db.h
src/extract_links/: extract-html.c  extract_links.c  extract_links.h
src/insert_feed/: insert-feed-data.c  insert-item-data.c  insert_feed.c  insert_feed.h
src/load_config/: config-auto.c  config-binds-default.c  config-copytoclipboardcommand.c  config-defaults.c  config-log.c  config-openinbrowsercommand.c  config-parse-colors.c  config-parse-input.c  config-parse.c  config-updatethreadscount.c  config-useragent.c  config-verifier.c  config.c  load_config.c  load_config.h
src/namespaces/: atom_10.c  google_ns_10.c  namespaces.h  rss_10.c  rss_10_content.c  rss_10_dublin_core.c  youtube_2015.c
src/parse_json/: setup-json-parser.c
src/parse_xml/: common.c  format-atom.c  format-dublincore.c  format-georss.c  format-mediarss.c  format-rss.c  gperf-data.c  gperf-data.in  parse_xml_feed.h  setup-opml-parser.c  setup-xml-parser.c
src/parsers/: parse_atom03.c  parse_atom10.c  parse_rss090.c  parse_rss091.c  parse_rss092.c  parse_rss094.c  parse_rss10.c  parse_rss11.c  parse_rss20.c  parsers.h
src/prepare_to_render_data/: prepare-text-html.c  prepare-text-plain.c  prepare_to_render_data.c  prepare_to_render_data.h
src/render_data/: line.c  render-text-html-entities.c  render-text-html-table.c  render-text-html-tag.c  render-text-html.c  render-text-plain.c  render_data.c  render_data.h
src/update_feed/: bucket-feed-insert.c  bucket-feed.c  bucket-item-insert.c  bucket-item.c  bucket-structure-generator.c  bucket-structure-link.c  bucket-structure-person.c  bucket.c  date-utils.c  db-insert-feed.c  db-insert-item.c  db-update-feed.c  download-headers.c  download.c  execute.c  feed-bucket.c  item-bucket.c  string-category.c  string-generator.c  string-link.c  string-person.c  struct-category.c  struct-feed.c  struct-generator.c  struct-item.c  struct-link.c  struct-person.c  struct-picture.c  struct-source.c  threading.c  update_feed.c  update_feed.h  xml-format-generic.c  xml-format-rss20.c  xml-format.c  xml-handler-atom03.c  xml-handler-atom10.c  xml-handler-dc.c  xml-handler-rss10content.c  xml-handler-rss10syndication.c  (+13 more)
src/update_feed/download_feed/: create-headers-list.c  download_feed.c  download_feed.h
src/update_feed/insert_feed/: insert-feed-data.c  insert-item-data.c  insert_feed.c  insert_feed.h
src/update_feed/parse_feed/: date-utils.c  json-handler-jsonfeed.c  json.c  parse_feed.c  parse_feed.h  struct-category.c  struct-feed.c  struct-item.c  struct-link.c  struct-person.c  xml-dispatcher.c  xml-handler-atom03.c  xml-handler-atom10.c  xml-handler-dc.c  xml-handler-dublincore.c  xml-handler-rss10content.c  xml-handler-rss11.c  xml-handler-rss20.c  xml-handler-rsscontent.c  xml-handler-yandex.c  xml-handler.c  xml-namespace-default.c  xml-namespace-dispatcher.c  xml-namespace-stack.c  xml.c
src/update_feed/parse_feed/json/: engage-json-parser.c
src/update_feed/parse_feed/parse_json_feed/: engage-json-parser.c  json-handler-jsonfeed.c  parse_json_feed.c  parse_json_feed.h
src/update_feed/parse_feed/parse_xml_feed/: engage-xml-parser.c  parse_xml_feed.c  parse_xml_feed.h  xml-common.c  xml-dispatcher.c  xml-handler-atom03.c  xml-handler-atom10.c  xml-handler-dublincore.c  xml-handler-georss-gml.c  xml-handler-georss.c  xml-handler-mediarss.c  xml-handler-mrss.c  xml-handler-rbcnews.c  xml-handler-rss09.c  xml-handler-rss10.c  xml-handler-rss11.c  xml-handler-rss20.c  xml-handler-rsscontent.c  xml-handler-yandex.c  xml-namespace-default.c  xml-namespace-stack.c
src/update_feed/parse_feed/xml/: engage-xml-parser.c  parse_xml_feed.h  xml-common.c  xml-handler-atom03.c  xml-handler-atom10.c  xml-handler-dublincore.c  (+10 more)
src/update_feed/parse_json/: engage-json-parser.c  parse_json_feed.h  setup-json-parser.c
src/update_feed/parse_xml/: common.c  engage-xml-parser.c  format-atom.c  format-dublincore.c  format-georss.c  format-mediarss.c  format-rss.c  gperf-data.c  gperf-data.in  parse_xml_feed.h  setup-xml-parser.c  xml-common.c  xml-handler-atom03.c  xml-handler-atom10.c  xml-handler-dublincore.c  xml-handler-georss-gml.c  xml-handler-georss.c  xml-handler-mediarss.c  xml-handler-rbcnews.c  xml-handler-rss.c  xml-handler-rss09.c  xml-handler-rss10.c  xml-handler-rss11.c  xml-handler-rss20.c  xml-handler-rsscontent.c  xml-handler-xhtml.c  xml-handler-yandex.c
tests/: complete_url.c  convert_feeds_to_opml.c  convert_opml_to_feeds.c  do_format.c  feeds  inlinefy_string.c  newsraft_all_bits_set.c  newsraft_base64_encode.c  newsraft_json_parse.c  newsraft_simple_hash.c  parse_date.c  parse_date_rfc3339.c  parse_feeds_file.c  parse_feeds_file_data.txt  render_data.c  run-check.sh  run-tests.sh  serialize_array.c  trim_whitespace_from_string.c
tests/assets/: convert_feeds_to_opml.xml  convert_opml_to_feeds.txt  newsraft_json_parse_1.json  newsraft_json_parse_2.json  newsraft_json_parse_3.json  parse_feeds_file.txt
