option('man-page', type: 'feature', value: 'auto', description: 'Generate and install man page')
option('support-format-atom10', type: 'feature', value: 'enabled', description: 'Support for Atom 1.0 format')
option('support-format-rss20', type: 'feature', value: 'enabled', description: 'Support for RSS 2.0 format')
option('support-format-rsscontent', type: 'feature', value: 'enabled', description: 'Support for RSS Content module format')
option('support-format-dublincore', type: 'feature', value: 'enabled', description: 'Support for Dublin Core format')
option('support-format-mediarss', type: 'feature', value: 'enabled', description: 'Support for Media RSS format')
option('support-format-yandex', type: 'feature', value: 'disabled', description: 'Support for Yandex format')
option('support-format-rbcnews', type: 'feature', value: 'disabled', description: 'Support for RBC News format')
option('support-format-rss11', type: 'feature', value: 'enabled', description: 'Support for RSS 1.1 format')
option('support-format-rss10', type: 'feature', value: 'enabled', description: 'Support for RSS 1.0 format')
option('support-format-rss09', type: 'feature', value: 'enabled', description: 'Support for RSS 0.9 format')
option('support-format-atom03', type: 'feature', value: 'enabled', description: 'Support for Atom 0.3 format')
option('support-format-georss', type: 'feature', value: 'enabled', description: 'Support for GeoRSS format')
option('support-format-georss-gml', type: 'feature', value: 'enabled', description: 'Support for GeoRSS GML format')
option('support-format-jsonfeed', type: 'feature', value: 'enabled', description: 'Support for JSON Feed format')
